--- a/Week-1.ipynb
+++ b/Week-1.ipynb
@@ -302,13 +302,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4cc2ef41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 Income   R-squared:                       0.840\n",
+      "Model:                            OLS   Adj. R-squared:                  0.820\n",
+      "Method:                 Least Squares   F-statistic:                     42.14\n",
+      "Date:                Tue, 09 Sep 2025   Prob (F-statistic):           0.000190\n",
+      "Time:                        17:07:50   Log-Likelihood:                -97.752\n",
+      "No. Observations:                  10   AIC:                             199.5\n",
+      "Df Residuals:                       8   BIC:                             200.1\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept   1.658e+04   2838.090      5.842      0.000       1e+04    2.31e+04\n",
+      "Experience  5386.0182    829.723      6.491      0.000    3472.673    7299.363\n",
+      "==============================================================================\n",
+      "Omnibus:                        5.351   Durbin-Watson:                   1.150\n",
+      "Prob(Omnibus):                  0.069   Jarque-Bera (JB):                1.725\n",
+      "Skew:                          -0.906   Prob(JB):                        0.422\n",
+      "Kurtosis:                       3.927   Cond. No.                         6.86\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
     "#Exercise 2:\n",
-    "url = 'https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/Age_Income.csv?token=GHSAT0AAAAAADKOZNJ5QEYB3SGQT7ZUP7YC2GAIG6A'\n",
+    "url = 'https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/Age_Income.csv?token=GHSAT0AAAAAADKOZNJ5N4UXGIM2P23HWP3K2GAIL2A'\n",
     "Age_Income = pd.read_csv(url)\n",
     "\n",
     "import statsmodels.formula.api as sm\n",
