Week 2 les complete

--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -46,47 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "88b3547f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                  Sales   R-squared:                       0.162\n",
-      "Model:                            OLS   Adj. R-squared:                  0.159\n",
-      "Method:                 Least Squares   F-statistic:                     58.15\n",
-      "Date:                Tue, 16 Sep 2025   Prob (F-statistic):           6.63e-45\n",
-      "Time:                        10:24:51   Log-Likelihood:                -10027.\n",
-      "No. Observations:                1207   AIC:                         2.006e+04\n",
-      "Df Residuals:                    1202   BIC:                         2.009e+04\n",
-      "Df Model:                           4                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "================================================================================================\n",
-      "                                   coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------------------------\n",
-      "Intercept                     1.157e+05   5.51e+04      2.101      0.036    7634.158    2.24e+05\n",
-      "Review_Score                    17.9424      2.305      7.783      0.000      13.419      22.466\n",
-      "Used_Price                      46.4553      5.796      8.015      0.000      35.084      57.827\n",
-      "Release_Year                   -58.4524     27.454     -2.129      0.033    -112.316      -4.589\n",
-      "Length_All_PlayStyles_Polled     1.1107      0.193      5.759      0.000       0.732       1.489\n",
-      "==============================================================================\n",
-      "Omnibus:                     1570.332   Durbin-Watson:                   0.838\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           275112.124\n",
-      "Skew:                           6.928   Prob(JB):                         0.00\n",
-      "Kurtosis:                      75.652   Cond. No.                     3.91e+06\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 3.91e+06. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%pip install openpyxl\n",
     "import pandas as pd\n",
@@ -94,23 +57,78 @@
     "url = 'https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/main/video_games%20-%20Copy%20(1).xlsx'\n",
     "VideoGameData = pd.read_excel(url)\n",
     "\n",
-    "import statsmodels.formula.api as sm\n",
+    "import statsmodels.formula.api as sm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e35fd4be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Simple Linear Regression Models\n",
     "\n",
-    "#model3 = sm.ols('Sales ~ Review_Score', data=VideoGameData).fit()\n",
+    "model3 = sm.ols('Sales ~ Review_Score', data=VideoGameData).fit()\n",
     "#print(model3.summary())\n",
     "\n",
-    "#model4 = sm.ols('Sales ~ Used_Price', data=VideoGameData).fit()\n",
+    "model4 = sm.ols('Sales ~ Used_Price', data=VideoGameData).fit()\n",
     "#print(model4.summary())\n",
     "\n",
-    "#model5 = sm.ols('Sales ~ Release_Year', data=VideoGameData).fit()\n",
+    "model5 = sm.ols('Sales ~ Release_Year', data=VideoGameData).fit()\n",
     "#print(model5.summary())\n",
     "\n",
-    "#model6 = sm.ols('Sales ~ Length_All_PlayStyles_Polled', data=VideoGameData).fit()\n",
-    "#print(model6.summary())\n",
-    "\n",
+    "model6 = sm.ols('Sales ~ Length_All_PlayStyles_Polled', data=VideoGameData).fit()\n",
+    "#print(model6.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2849209f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Multiple Linear Regression Model\n",
     "model7 = sm.ols('Sales ~ Review_Score + Used_Price + Release_Year + Length_All_PlayStyles_Polled', data=VideoGameData).fit()\n",
-    "print(model7.summary())\n",
-    "\n"
+    "print(model7.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff0d1c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       variable           VIF\n",
+      "0                         const  3.807478e+06\n",
+      "1                         Sales  1.193507e+00\n",
+      "2                  Review_Score  1.172719e+00\n",
+      "3                    Used_Price  1.115458e+00\n",
+      "4                  Release_Year  1.042607e+00\n",
+      "5  Length_All_PlayStyles_Polled  1.148744e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Multicollinearity\n",
+    "#VIF\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor as vif #import the VIF function\n",
+    "from statsmodels.tools.tools import add_constant #import the add_constant function\n",
+    "\n",
+    "X = VideoGameData[['Sales', 'Review_Score', 'Used_Price', 'Release_Year', 'Length_All_PlayStyles_Polled']].dropna() #select the relevant variables and delete missing values\n",
+    "X = add_constant(X) #add a constant to the variables. VIF WON'T WORK CORRECTLY IF YOU DON'T DO THIS\n",
+    "\n",
+    "#Create a dataframe that contains the VIF values\n",
+    "VIF_data = pd.DataFrame() #create a pandas dataframe\n",
+    "VIF_data[\"variable\"] = X.columns #create a variable that simply lists the names of the variables you picked\n",
+    "VIF_data[\"VIF\"] = [vif(X,i) \n",
+    "                   for i in range(len(X.columns))] #a loop that creates vif values for each variable and then puts it in the VIF column\n",
+    "print(VIF_data) #print the results\n"
    ]
   }
  ],
