--- a/Examples class 4 - Copy.ipynb
+++ b/Examples class 4 - Copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
          "type": "float"
         }
        ],
-       "ref": "d901f5f8-4c8a-4131-94ac-640c042a2704",
+       "ref": "312e5e03-1e40-4102-a7d4-9260d6f00486",
        "rows": [
         [
          "0",
@@ -200,7 +200,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,13 +215,14 @@
     "from numpy import absolute\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "df = pd.read_csv(\"insurance.csv\")\n",
+    "url = 'https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/insurance.csv'\n",
+    "df = pd.read_csv(url)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -312,16 +313,16 @@
      "output_type": "stream",
      "text": [
       "the average prediction error with linear regression was: 4213\n",
-      "the average prediction error with lasso is: 4159\n",
-      "the average prediction error with ridge is: 5432\n"
+      "the average prediction error with lasso is: 4200\n",
+      "the average prediction error with ridge is: 4223\n"
      ]
     }
    ],
    "source": [
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.linear_model import Ridge\n",
-    "LassoModel = Lasso(alpha=100)\n",
-    "RidgeModel = Ridge(alpha=100)\n",
+    "LassoModel = Lasso(alpha=10)\n",
+    "RidgeModel = Ridge(alpha=10)\n",
     "\n",
     "#Run the cross fold validation again (same as earlier)\n",
     "scoreslasso = cross_val_score(LassoModel, X, y, scoring='neg_mean_absolute_error', cv=cv) \n",
@@ -338,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env2526",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
