--- a/Examples class 5 - Copy.ipynb
+++ b/Examples class 5 - Copy.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +59,7 @@
          "type": "float"
         }
        ],
-       "ref": "d0829245-a6f6-4c22-ada4-fc2e84f23495",
+       "ref": "344e1ce9-56b3-42dc-8bd9-100c8cd1b50c",
        "rows": [
         [
          "0",
@@ -200,7 +209,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,17 +226,18 @@
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "import tensorflow as tf\n",
-    "from scikeras.wrappers import KerasRegressor\n",
+    "#import tensorflow as tf\n",
+    "#from scikeras.wrappers import KerasRegressor\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
-    "df = pd.read_csv(\"insurance.csv\")\n",
+    "url = 'https://github.com/Patrick0481/Intro-to-modeling/raw/refs/heads/main/insurance.csv'\n",
+    "df = pd.read_csv(url)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +521,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env2526",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -525,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
