--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "413cfd36",
    "metadata": {},
    "outputs": [
@@ -23,8 +23,8 @@
       "Dep. Variable:                   MEDV   R-squared:                       0.510\n",
       "Model:                            OLS   Adj. R-squared:                  0.508\n",
       "Method:                 Least Squares   F-statistic:                     235.3\n",
-      "Date:                Thu, 23 Oct 2025   Prob (F-statistic):           9.12e-71\n",
-      "Time:                        11:36:08   Log-Likelihood:                -2855.2\n",
+      "Date:                Thu, 06 Nov 2025   Prob (F-statistic):           9.12e-71\n",
+      "Time:                        14:32:34   Log-Likelihood:                -2855.2\n",
       "No. Observations:                 455   AIC:                             5716.\n",
       "Df Residuals:                     452   BIC:                             5729.\n",
       "Df Model:                           2                                         \n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6e57c101",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ac54e308",
    "metadata": {},
    "outputs": [
@@ -105,8 +105,8 @@
       "Dep. Variable:                   MEDV   R-squared:                       0.885\n",
       "Model:                            OLS   Adj. R-squared:                  0.882\n",
       "Method:                 Least Squares   F-statistic:                     261.5\n",
-      "Date:                Thu, 23 Oct 2025   Prob (F-statistic):          8.50e-198\n",
-      "Time:                        11:49:32   Log-Likelihood:                -2525.2\n",
+      "Date:                Thu, 06 Nov 2025   Prob (F-statistic):          8.50e-198\n",
+      "Time:                        14:32:49   Log-Likelihood:                -2525.2\n",
       "No. Observations:                 455   AIC:                             5078.\n",
       "Df Residuals:                     441   BIC:                             5136.\n",
       "Df Model:                          13                                         \n",
@@ -152,37 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "b77195a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  variable        VIF\n",
-      "3                       RM  86.700592\n",
-      "8                  PTRATIO  85.342630\n",
-      "2                      NOX  74.675255\n",
-      "7                      TAX  58.664891\n",
-      "10    LANDMARK_No Landmark  39.161748\n",
-      "4                      AGE  19.701094\n",
-      "6                      RAD  14.871396\n",
-      "1                    INDUS  14.777484\n",
-      "5                      DIS  13.100940\n",
-      "11           LANDMARK_Park   5.894636\n",
-      "12  LANDMARK_Shopping Mall   5.480700\n",
-      "0                     CRIM   1.948197\n",
-      "13        LANDMARK_Stadium   1.791045\n",
-      "9                 CHAS_yes   1.161228\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from statsmodels.stats.outliers_influence import variance_inflation_factor as vif #import the VIF function\n",
-    "from statsmodels.tools.tools import add_constant\n",
-    "import statsmodels.api as sm\n",
-    "\n",
     "# Create a copy of the data without the target variable\n",
     "X = BostonData.drop(columns=['MEDV'])\n",
     "\n",
@@ -191,89 +165,65 @@
     "\n",
     "# Convert boolean columns to int\n",
     "X = X.astype(float)\n",
-    "\n",
-    "# Calculate VIF for each variable\n",
-    "VIF_data = pd.DataFrame()\n",
-    "VIF_data[\"variable\"] = X.columns\n",
-    "VIF_data[\"VIF\"] = [vif(X.values, i) for i in range(X.shape[1])]\n",
-    "\n",
-    "# Sort by VIF value in descending order\n",
-    "VIF_data = VIF_data.sort_values('VIF', ascending=False)\n",
-    "print(VIF_data)\n",
-    "\n",
-    "#he VIF results clearly show a multicollinearity problem\n",
-    "#Variables like RM, PTRATIO, NOX, TAX have VIF values > 10, meaning they are strongly correlated with other predictors\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "d5b46c0e",
+   "execution_count": 9,
+   "id": "301dde0c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                   MEDV   R-squared:                       0.637\n",
-      "Model:                            OLS   Adj. R-squared:                  0.631\n",
-      "Method:                 Least Squares   F-statistic:                     97.85\n",
-      "Date:                Thu, 23 Oct 2025   Prob (F-statistic):           3.47e-93\n",
-      "Time:                        12:24:13   Log-Likelihood:                -2787.0\n",
-      "No. Observations:                 455   AIC:                             5592.\n",
-      "Df Residuals:                     446   BIC:                             5629.\n",
-      "Df Model:                           8                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==========================================================================================\n",
-      "                             coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------------------\n",
-      "const                    619.4215     38.327     16.161      0.000     544.097     694.746\n",
-      "CRIM                      -4.2883      0.758     -5.657      0.000      -5.778      -2.798\n",
-      "DIS                      -15.6473      4.408     -3.550      0.000     -24.311      -6.984\n",
-      "RAD                        0.0160      0.868      0.018      0.985      -1.690       1.722\n",
-      "AGE                       -1.1052      0.298     -3.705      0.000      -1.691      -0.519\n",
-      "INDUS                     -6.1651      1.268     -4.861      0.000      -8.658      -3.672\n",
-      "LANDMARK_Park            255.5610     18.662     13.694      0.000     218.884     292.238\n",
-      "LANDMARK_Shopping Mall   117.1628     18.278      6.410      0.000      81.240     153.085\n",
-      "LANDMARK_Stadium         570.8331     40.335     14.152      0.000     491.563     650.104\n",
-      "==============================================================================\n",
-      "Omnibus:                      333.297   Durbin-Watson:                   1.967\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             4678.048\n",
-      "Skew:                           3.077   Prob(JB):                         0.00\n",
-      "Kurtosis:                      17.453   Cond. No.                         616.\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "\n",
-      "Variance Inflation Factors (after cleaning):\n",
-      "                 Variable        VIF\n",
-      "0                   const  53.514416\n",
-      "1                    CRIM   1.637216\n",
-      "2                     DIS   3.046894\n",
-      "3                     RAD   2.098639\n",
-      "4                     AGE   2.555811\n",
-      "5                   INDUS   2.800173\n",
-      "6           LANDMARK_Park   1.262767\n",
-      "7  LANDMARK_Shopping Mall   1.106102\n",
-      "8        LANDMARK_Stadium   1.023768\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\patri\\AppData\\Local\\Temp\\ipykernel_15148\\1374549600.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X[['LANDMARK_Park', 'LANDMARK_Shopping Mall', 'LANDMARK_Stadium']] = X[['LANDMARK_Park', 'LANDMARK_Shopping Mall', 'LANDMARK_Stadium']].astype(int)\n"
+      "                  Variable        VIF\n",
+      "0                    const   1.000000\n",
+      "1                     CRIM   1.665426\n",
+      "2                    INDUS   4.041542\n",
+      "3                      NOX   4.321557\n",
+      "4                       RM   1.934983\n",
+      "5                      AGE   2.812461\n",
+      "6                      DIS   3.536924\n",
+      "7                      RAD   7.307008\n",
+      "8                      TAX   8.549576\n",
+      "9                  PTRATIO   1.795496\n",
+      "10                CHAS_yes   1.095050\n",
+      "11    LANDMARK_No Landmark  11.324397\n",
+      "12           LANDMARK_Park   5.759003\n",
+      "13  LANDMARK_Shopping Mall   5.645789\n",
+      "14        LANDMARK_Stadium   1.828077\n"
      ]
     }
    ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "import statsmodels.api as sm\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Center and scale predictors\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = pd.DataFrame(scaler.fit_transform(X), columns=X.columns)\n",
+    "\n",
+    "# Add constant AFTER scaling\n",
+    "X_scaled_const = sm.add_constant(X_scaled)\n",
+    "\n",
+    "# Compute new VIFs\n",
+    "VIF_data_scaled = pd.DataFrame()\n",
+    "VIF_data_scaled[\"Variable\"] = X_scaled_const.columns\n",
+    "VIF_data_scaled[\"VIF\"] = [variance_inflation_factor(X_scaled_const.values, i)\n",
+    "                          for i in range(X_scaled_const.shape[1])]\n",
+    "print(VIF_data_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5b46c0e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from statsmodels.stats.outliers_influence import variance_inflation_factor as vif #import the VIF function\n",
     "from statsmodels.tools.tools import add_constant\n",
@@ -303,6 +253,98 @@
     "VIF_data[\"VIF\"] = [vif(X.values, i) for i in range(X.shape[1])]\n",
     "print(\"\\nVariance Inflation Factors (after cleaning):\")\n",
     "print(VIF_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "521433a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "APA-Style Multiple Regression Table:\n",
+      "             Predictor        B  SE B       t     p Sig  95% CI Lower  95% CI Upper       VIF\n",
+      "                 const  450.035 2.956 152.235 0.000 ***       444.225       455.845  1.000000\n",
+      "                  CRIM  -30.428 3.815  -7.976 0.000 ***       -37.926       -22.930  1.665426\n",
+      "                 INDUS    4.698 5.943   0.791 0.430            -6.982        16.378  4.041542\n",
+      "                   NOX  -28.283 6.145  -4.602 0.000 ***       -40.361       -16.205  4.321557\n",
+      "                    RM   20.745 4.112   5.045 0.000 ***        12.663        28.827  1.934983\n",
+      "                   AGE  -18.637 4.958  -3.759 0.000 ***       -28.380        -8.893  2.812461\n",
+      "                   DIS  -17.577 5.560  -3.162 0.002  **       -28.504        -6.651  3.536924\n",
+      "                   RAD   21.125 7.991   2.644 0.008  **         5.420        36.830  7.307008\n",
+      "                   TAX  -29.474 8.644  -3.410 0.001  **       -46.462       -12.485  8.549576\n",
+      "               PTRATIO  -17.161 3.961  -4.332 0.000 ***       -24.946        -9.375  1.795496\n",
+      "              CHAS_yes    5.599 3.093   1.810 0.071            -0.481        11.679  1.095050\n",
+      "  LANDMARK_No Landmark -235.093 9.948 -23.632 0.000 ***      -254.645      -215.542 11.324397\n",
+      "         LANDMARK_Park  -93.744 7.094 -13.214 0.000 ***      -107.687       -79.801  5.759003\n",
+      "LANDMARK_Shopping Mall -128.028 7.024 -18.227 0.000 ***      -141.833      -114.223  5.645789\n",
+      "      LANDMARK_Stadium   -2.249 3.997  -0.563 0.574           -10.105         5.606  1.828077\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "\n",
+    "# 1️⃣ Prepare predictors and target\n",
+    "y = BostonData['MEDV']\n",
+    "X = BostonData.drop(columns=['MEDV'])\n",
+    "\n",
+    "# Convert categorical variables to dummies\n",
+    "X = pd.get_dummies(X, columns=['CHAS', 'LANDMARK'], drop_first=True)\n",
+    "X = X.astype(float)\n",
+    "\n",
+    "# Standardize predictors\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = pd.DataFrame(scaler.fit_transform(X), columns=X.columns)\n",
+    "\n",
+    "# Add constant\n",
+    "X_scaled_const = sm.add_constant(X_scaled)\n",
+    "\n",
+    "# 2️⃣ Fit the multiple regression model\n",
+    "model = sm.OLS(y, X_scaled_const).fit()\n",
+    "\n",
+    "# 3️⃣ Create APA-style table\n",
+    "apa_table = pd.DataFrame({\n",
+    "    \"Predictor\": X_scaled_const.columns,\n",
+    "    \"B\": model.params.values,\n",
+    "    \"SE B\": model.bse.values,\n",
+    "    \"t\": model.tvalues.values,\n",
+    "    \"p\": model.pvalues.values\n",
+    "}).round(3)\n",
+    "\n",
+    "# Add significance stars\n",
+    "def stars(p):\n",
+    "    if p < 0.001: return \"***\"\n",
+    "    elif p < 0.01: return \"**\"\n",
+    "    elif p < 0.05: return \"*\"\n",
+    "    else: return \"\"\n",
+    "apa_table[\"Sig\"] = apa_table[\"p\"].apply(stars)\n",
+    "\n",
+    "# Add 95% confidence intervals\n",
+    "conf = model.conf_int().round(3)\n",
+    "conf.columns = [\"95% CI Lower\", \"95% CI Upper\"]\n",
+    "# Ensure the confidence intervals are aligned with the apa_table predictor order\n",
+    "conf = conf.reindex(apa_table[\"Predictor\"])\n",
+    "apa_table[\"95% CI Lower\"] = conf[\"95% CI Lower\"].values\n",
+    "apa_table[\"95% CI Upper\"] = conf[\"95% CI Upper\"].values\n",
+    "\n",
+    "# Compute VIFs\n",
+    "vif_data = pd.DataFrame({\n",
+    "    \"Predictor\": X_scaled_const.columns,\n",
+    "    \"VIF\": [variance_inflation_factor(X_scaled_const.values, i) for i in range(X_scaled_const.shape[1])]\n",
+    "})\n",
+    "apa_table = apa_table.merge(vif_data, on=\"Predictor\")\n",
+    "\n",
+    "# 4️⃣ Display clean APA table\n",
+    "print(\"\\nAPA-Style Multiple Regression Table:\")\n",
+    "print(apa_table.to_string(index=False))"
    ]
   }
  ],
