--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "448e9f87",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b414c2d5",
    "metadata": {},
    "outputs": [
@@ -38,8 +38,8 @@
       "Dep. Variable:                   MEDV   R-squared:                       0.527\n",
       "Model:                            OLS   Adj. R-squared:                  0.525\n",
       "Method:                 Least Squares   F-statistic:                     252.2\n",
-      "Date:                Thu, 23 Oct 2025   Prob (F-statistic):           2.74e-74\n",
-      "Time:                        14:56:11   Log-Likelihood:                -2847.1\n",
+      "Date:                Fri, 07 Nov 2025   Prob (F-statistic):           2.74e-74\n",
+      "Time:                        13:43:27   Log-Likelihood:                -2847.1\n",
       "No. Observations:                 455   AIC:                             5700.\n",
       "Df Residuals:                     452   BIC:                             5712.\n",
       "Df Model:                           2                                         \n",
@@ -75,10 +75,10 @@
     "X2 = sm.add_constant(X2)\n",
     "X3 = sm.add_constant(X3)\n",
     "\n",
-    "model4 = sm.OLS(y, X1).fit()\n",
+    "#model4 = sm.OLS(y, X1).fit()\n",
     "#print(model4.summary())  #Looking at RM alone shows a strong relationship with MEDV, as indicated by a high R-squared value and a significant p-value for the predictor.\n",
     "\n",
-    "model5 = sm.OLS(y, X2).fit()\n",
+    "#model5 = sm.OLS(y, X2).fit()\n",
     "#print(model5.summary()) #Looking at CRIM alone shows a weaker relationship with MEDV, as indicated by a lower R-squared value and a less significant p-value for the predictor.\n",
     "\n",
     "model6 = sm.OLS(y, X3).fit()\n",
